FIX: font size should fix contrast issues

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -43,7 +43,7 @@ h3 {
 }
 
 .nav-item .nav-link {
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 500px;
 }
 
